# synthetmic-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/synthetmic_cli/: cli.py  commands.py  shared.py
